@@ -1042,7 +1042,7 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE -frecord-delim-with-fixed-recs=warning prog.cob], [1], [],
 [prog.cob:25: warning: RECORD DELIMITER STANDARD-1 ignored
-prog.cob:28: warning: Phrase in RECORD DELIMITER not recognised; will be ignored
+prog.cob:28: warning: Phrase in RECORD DELIMITER not recognized; will be ignored.
 prog.cob:33: error: ORGANIZATION INDEXED is incompatible with RECORD DELIMITER
 prog.cob:39: error: RECORD DELIMITER LINE-SEQUENTIAL only allowed with (LINE) SEQUENTIAL files
 prog.cob:36: error: RECORD clause is invalid for file 'bad-2' (file type)
